added about, how it works, price, faq and customized footer

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+div, p {
+  animation: ease-in-out animate 0.2s;
+}
+
+@keyframes animate {
+  from {
+    opacity: 0.4;
+  }
+
+  to {
+    transform: 1;
+  }
+}
